<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/display"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            android:layout_marginTop="30dp"
            android:textSize="36sp"
            android:textAlignment="textEnd"
            android:autofillHints="false"
            android:inputType="none"
            tools:ignore="LabelFor" android:id="@+id/input"/>
    <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="6dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.93"
            android:id="@+id/tableLayout">

        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <Button
                    android:text="@string/clear"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_weight="1"
                    android:id="@+id/clearbtn"
                    android:background="@drawable/circle"
                    android:textColor="#FFFFFF"
                    android:layout_margin="5dp"
                    android:textSize="24sp"
                    android:backgroundTint="#DD2C00"
                    android:onClick="clearbtn"/>
            <Button
                    android:text="@string/parent"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_weight="1"
                    android:id="@+id/parentbtn"
                    android:background="@drawable/circle"
                    android:textColor="#FFFFFF"
                    android:layout_margin="5dp"
                    android:textSize="24sp"
                    android:onClick="parentbtn"/>
            <Button
                    android:text="@string/exp"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_weight="1"
                    android:id="@+id/expbtn"
                    android:background="@drawable/circle"
                    android:textColor="#FFFFFF"
                    android:layout_margin="5dp"
                    android:textSize="24sp"
                    android:onClick="expbtn"/>
            <Button
                    android:text="@string/div"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_weight="1"
                    android:id="@+id/divbtn"
                    android:background="@drawable/circle"
                    android:textColor="#FFFFFF"
                    android:layout_margin="5dp"
                    android:textSize="24sp"
                    android:onClick="divbtn"/>
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <Button
                    android:text="@string/seven"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_weight="1"
                    android:id="@+id/sevenbtn"
                    android:background="@drawable/circle"
                    android:textColor="#FFFFFF"
                    android:layout_margin="5dp"
                    android:textSize="24sp"
                    android:onClick="sevenbtn"/>
            <Button
                    android:text="@string/eight"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_weight="1"
                    android:id="@+id/eightbtn"
                    android:background="@drawable/circle"
                    android:textColor="#FFFFFF"
                    android:layout_margin="5dp"
                    android:textSize="24sp"
                    android:onClick="eightbtn"/>
            <Button
                    android:text="@string/nine"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_weight="1"
                    android:id="@+id/ninebtn"
                    android:background="@drawable/circle"
                    android:textColor="#FFFFFF"
                    android:layout_margin="5dp"
                    android:textSize="24sp"
                    android:onClick="ninebtn"/>
            <Button
                    android:text="@string/mul"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_weight="1"
                    android:id="@+id/multibtn"
                    android:background="@drawable/circle"
                    android:textColor="#FFFFFF"
                    android:layout_margin="5dp"
                    android:textSize="24sp"
                    android:onClick="mulbtn"/>
        </TableRow>
        <TableRow android:layout_width="342dp" android:layout_height="wrap_content">
            <Button
                    android:text="@string/four"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_weight="1"
                    android:id="@+id/fourbtn"
                    android:background="@drawable/circle"
                    android:textColor="#FFFFFF"
                    android:layout_margin="5dp"
                    android:textSize="24sp"
                    android:onClick="fourbtn"/>
            <Button
                    android:text="@string/five"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_weight="1"
                    android:id="@+id/fivebtn"
                    android:background="@drawable/circle"
                    android:textColor="#FFFFFF"
                    android:layout_margin="5dp"
                    android:textSize="24sp"
                    android:onClick="fivebtn"/>
            <Button
                    android:text="@string/six"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_weight="1"
                    android:id="@+id/sixbtn"
                    android:background="@drawable/circle"
                    android:textColor="#FFFFFF"
                    android:layout_margin="5dp"
                    android:textSize="24sp"
                    android:onClick="sixbtn"/>
            <Button
                    android:text="@string/add"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_weight="1"
                    android:id="@+id/addbtn"
                    android:background="@drawable/circle"
                    android:textColor="#FFFFFF"
                    android:layout_margin="5dp"
                    android:textSize="24sp"
                    android:onClick="subbtn"/>
        </TableRow>
        <TableRow android:layout_width="wrap_content" android:layout_height="36dp">
            <Button
                    android:text="@string/one"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_weight="1"
                    android:id="@+id/onebtn"
                    android:background="@drawable/circle"
                    android:textColor="#FFFFFF"
                    android:layout_margin="5dp"
                    android:textSize="24sp"
                    android:onClick="onebtn"/>
            <Button
                    android:text="@string/two"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_weight="1"
                    android:id="@+id/twobtn"
                    android:background="@drawable/circle"
                    android:textColor="#FFFFFF"
                    android:layout_margin="5dp"
                    android:textSize="24sp"
                    android:onClick="twobtn"/>
            <Button
                    android:text="@string/three"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_weight="1"
                    android:id="@+id/threebtn"
                    android:background="@drawable/circle"
                    android:textColor="#FFFFFF"
                    android:layout_margin="5dp"
                    android:textSize="24sp"
                    android:onClick="threebtn"/>
            <Button
                    android:text="@string/sub"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_weight="1"
                    android:id="@+id/subbtn"
                    android:background="@drawable/circle"
                    android:textColor="#FFFFFF"
                    android:layout_margin="5dp"
                    android:textSize="24sp"
                    android:onClick="subbtn"/>
        </TableRow>
        <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            <Button
                    android:text="@string/plusMinus"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_weight="1"
                    android:id="@+id/plusMinusbtn"
                    android:background="@drawable/circle"
                    android:textColor="#FFFFFF"
                    android:layout_margin="5dp"
                    android:textSize="24sp"
                    android:onClick="plusMinusbtn"/>
            <Button
                    android:text="@string/zero"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_weight="1"
                    android:id="@+id/zerobtn"
                    android:background="@drawable/circle"
                    android:textColor="#FFFFFF"
                    android:layout_margin="5dp"
                    android:textSize="24sp"
                    android:onClick="zerobtn"/>
            <Button
                    android:text="@string/point"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_weight="1"
                    android:id="@+id/ptbtn"
                    android:background="@drawable/circle"
                    android:textColor="#FFFFFF"
                    android:layout_margin="5dp"
                    android:textSize="24sp"
                    android:onClick="ptbtn"/>
            <Button
                    android:text="@string/equals"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_weight="1"
                    android:id="@+id/equalbtn"
                    android:background="@drawable/circle"
                    android:textColor="#FFFFFF"
                    android:layout_margin="5dp"
                    android:textSize="24sp"
                    android:backgroundTint="#43A047"
                    android:onClick="equalsbtn"/>
        </TableRow>
    </TableLayout>
    <ImageButton
            android:text="@string/backspace"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button21"
            android:background="@drawable/circle"
            android:contentDescription="@string/backspace"
            app:srcCompat="@drawable/backspace"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.97"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="259dp" android:layout_marginEnd="5dp" tools:ignore="SpeakableTextPresentCheck"
            android:layout_marginBottom="5dp" app:layout_constraintBottom_toTopOf="@+id/tableLayout"
            app:layout_constraintVertical_bias="1.0" android:layout_marginStart="5dp"/>

</android.support.constraint.ConstraintLayout>